--- a/note/函数.md
+++ b/note/函数.md
@@ -37,11 +37,149 @@ x: default_value
 x: null
 ```
 
-### ES6的写法好处
-* 简洁直观
-* 阅读代码的人，可以立刻意识到哪些参数是可以省略的
-* 有利于将来的代码优化
+* ES6的写法好处
+
+
+1. 简洁直观
+2. 阅读代码的人，可以立刻意识到哪些参数是可以省略的
+3. 有利于将来的代码优化
+
 
 ---
 
-## 与解构赋值默认值结合使用
+* 与解构赋值默认值结合使用
+```
+function fetch(url, { method = 'GET' } = {}) {
+  console.log(method);
+}
+
+fetch('http://example.com'); // GET
+```
+上面代码中，函数fetch没有第二个参数时，函数参数的默认值就会生效，然后才是解构赋值的默认值生效，变量method才会取到默认值GET。
+
+下面两种写法有什么差别？
+```
+// 写法一
+function m1({x = 0, y = 0} = {}) {
+  return [x, y];
+}
+
+// 写法二
+function m2({x, y} = { x: 0, y: 0 }) {
+  return [x, y];
+}
+```
+上面两种写法都对函数的参数设定了默认值，区别是写法一函数参数的默认值是空对象，但是设置了对象解构赋值的默认值；写法二函数参数的默认值是一个有具体属性的对象，但是没有设置对象解构赋值的默认值。
+```
+// 函数没有参数的情况
+m1() // [0, 0]
+m2() // [0, 0]
+
+// x和y都有值的情况
+m1({x: 3, y: 8}) // [3, 8]
+m2({x: 3, y: 8}) // [3, 8]
+
+// x有值，y无值的情况
+m1({x: 3}) // [3, 0]
+m2({x: 3}) // [3, undefined]
+
+// x和y都无值的情况
+m1({}) // [0, 0];
+m2({}) // [undefined, undefined]
+
+m1({z: 3}) // [0, 0]
+m2({z: 3}) // [undefined, undefined]
+```
+* 参数默认值的位置
+通常情况下，定义了默认值的参数，应该是函数的尾参数。因为这样比较容易看出来，到底省略了哪些参数。如果非尾部的参数设置默认值，实际上这个参数是没法省略的。
+```
+// 例一
+function f(x = 1, y) {
+  return [x, y];
+}
+
+f() // [1, undefined]
+f(2) // [2, undefined])
+f(, 1) // 报错
+f(undefined, 1) // [1, 1]
+
+// 例二
+function f(x, y = 5, z) {
+  return [x, y, z];
+}
+
+f() // [undefined, 5, undefined]
+f(1) // [1, 5, undefined]
+f(1, ,2) // 报错
+f(1, undefined, 2) // [1, 5, 2]
+```
+上面代码中，有默认值的参数都不是尾参数。这时，无法只省略该参数，而不省略它后面的参数，除非显式输入undefined。
+
+如果传入undefined，将触发该参数等于默认值，null则没有这个效果。
+```
+function foo(x = 5, y = 6) {
+  console.log(x, y);
+}
+
+foo(undefined, null)
+// 5 null
+```
+
+* 函数的length属性
+指定了默认值以后，函数的length属性，将返回没有指定默认值的参数个数。也就是说，指定了默认值后，length属性将失真。
+```
+(function (a) {}).length // 1
+(function (a = 5) {}).length // 0
+(function (a, b, c = 5) {}).length // 2
+```
+上面代码中，length属性的返回值，等于函数的参数个数减去指定了默认值的参数个数。比如，上面最后一个函数，定义了3个参数，其中有一个参数c指定了默认值，因此length属性等于3减去1，最后得到2。
+
+这是因为length属性的含义是，该函数预期传入的参数个数。某个参数指定默认值以后，预期传入的参数个数就不包括这个参数了。同理，rest参数也不会计入length属性。
+```
+(function(...args) {}).length // 0
+```
+如果设置了默认值的参数不是尾参数，那么length属性也不再计入后面的参数了。
+```
+(function (a = 0, b, c) {}).length // 0
+(function (a, b = 1, c) {}).length // 1
+```
+
+* 应用
+```
+function throwIfMissing() {
+  throw new Error('Missing parameter');
+}
+
+function throwIfParameterTypeNotEqual(param, type) {
+  if (typeof(param) !== type) {
+    throw new Error('Parameter type error')
+  }
+}
+
+function func(n = throwIfMissing()) {
+  throwIfParameterTypeNotEqual(n, 'number');
+  return n*n;
+}
+
+
+console.log(func(3));
+console.log(func()); // 报错
+console.log(func('1')); // 报错
+```
+
+## rest参数
+arguments变量的写法
+```
+function sortNumbers() {
+  return Array.prototype.slice.call(arguments).sort();
+}
+```
+rest参数的写法
+```
+const sortNumbers = (...numbers) => numbers.sort();
+```
+rest参数中的变量代表一个数组，所以数组特有的方法都可以用于这个变量，如forEach。
+rest参数之后不能再有其他参数（即只能是最后一个参数），否则会报错。
+函数的length属性，不包括rest参数。
+
+## 函数的length属性，不包括rest参数。
