--- a/note/函数.md
+++ b/note/函数.md
@@ -48,6 +48,7 @@ x: null
 ---
 
 * 与解构赋值默认值结合使用
+
 ```
 function fetch(url, { method = 'GET' } = {}) {
   console.log(method);
@@ -55,9 +56,11 @@ function fetch(url, { method = 'GET' } = {}) {
 
 fetch('http://example.com'); // GET
 ```
+
 上面代码中，函数fetch没有第二个参数时，函数参数的默认值就会生效，然后才是解构赋值的默认值生效，变量method才会取到默认值GET。
 
 下面两种写法有什么差别？
+
 ```
 // 写法一
 function m1({x = 0, y = 0} = {}) {
@@ -69,7 +72,9 @@ function m2({x, y} = { x: 0, y: 0 }) {
   return [x, y];
 }
 ```
+
 上面两种写法都对函数的参数设定了默认值，区别是写法一函数参数的默认值是空对象，但是设置了对象解构赋值的默认值；写法二函数参数的默认值是一个有具体属性的对象，但是没有设置对象解构赋值的默认值。
+
 ```
 // 函数没有参数的情况
 m1() // [0, 0]
@@ -90,8 +95,10 @@ m2({}) // [undefined, undefined]
 m1({z: 3}) // [0, 0]
 m2({z: 3}) // [undefined, undefined]
 ```
+
 * 参数默认值的位置
 通常情况下，定义了默认值的参数，应该是函数的尾参数。因为这样比较容易看出来，到底省略了哪些参数。如果非尾部的参数设置默认值，实际上这个参数是没法省略的。
+
 ```
 // 例一
 function f(x = 1, y) {
@@ -113,9 +120,11 @@ f(1) // [1, 5, undefined]
 f(1, ,2) // 报错
 f(1, undefined, 2) // [1, 5, 2]
 ```
+
 上面代码中，有默认值的参数都不是尾参数。这时，无法只省略该参数，而不省略它后面的参数，除非显式输入undefined。
 
 如果传入undefined，将触发该参数等于默认值，null则没有这个效果。
+
 ```
 function foo(x = 5, y = 6) {
   console.log(x, y);
@@ -127,24 +136,30 @@ foo(undefined, null)
 
 * 函数的length属性
 指定了默认值以后，函数的length属性，将返回没有指定默认值的参数个数。也就是说，指定了默认值后，length属性将失真。
+
 ```
 (function (a) {}).length // 1
 (function (a = 5) {}).length // 0
 (function (a, b, c = 5) {}).length // 2
 ```
+
 上面代码中，length属性的返回值，等于函数的参数个数减去指定了默认值的参数个数。比如，上面最后一个函数，定义了3个参数，其中有一个参数c指定了默认值，因此length属性等于3减去1，最后得到2。
 
 这是因为length属性的含义是，该函数预期传入的参数个数。某个参数指定默认值以后，预期传入的参数个数就不包括这个参数了。同理，rest参数也不会计入length属性。
+
 ```
 (function(...args) {}).length // 0
 ```
+
 如果设置了默认值的参数不是尾参数，那么length属性也不再计入后面的参数了。
+
 ```
 (function (a = 0, b, c) {}).length // 0
 (function (a, b = 1, c) {}).length // 1
 ```
 
 * 应用
+
 ```
 function throwIfMissing() {
   throw new Error('Missing parameter');
@@ -168,18 +183,169 @@ console.log(func('1')); // 报错
 ```
 
 ## rest参数
+
 arguments变量的写法
+
 ```
 function sortNumbers() {
   return Array.prototype.slice.call(arguments).sort();
 }
 ```
+
 rest参数的写法
+
 ```
 const sortNumbers = (...numbers) => numbers.sort();
 ```
+
 rest参数中的变量代表一个数组，所以数组特有的方法都可以用于这个变量，如forEach。
 rest参数之后不能再有其他参数（即只能是最后一个参数），否则会报错。
 函数的length属性，不包括rest参数。
 
-## 函数的length属性，不包括rest参数。
+* 应用
+
+合并数组
+
+```
+let arr1 = ['a', 'b'];
+let arr2 = ['c'];
+let arr3 = ['d', 'e'];
+
+// ES5的合并数组
+arr1.concat(arr2, arr3);
+// [ 'a', 'b', 'c', 'd', 'e' ]
+
+// ES6的合并数组
+[...arr1, ...arr2, ...arr3]
+// [ 'a', 'b', 'c', 'd', 'e' ]
+```
+
+与解构赋值结合
+
+```
+const [first, ...rest] = ["foo"];
+first  // "foo"
+rest   // []
+```
+
+函数的返回值
+
+JavaScript的函数只能返回一个值，如果需要返回多个值，只能返回数组或对象。扩展运算符提供了解决这个问题的一种变通方法。
+
+字符串
+
+扩展运算符还可以将字符串转为真正的数组。
+
+```
+[...'hello']
+// [ "h", "e", "l", "l", "o" ]
+```
+
+实现了Iterator接口的对象
+
+任何Iterator接口的对象，都可以用扩展运算符转为真正的数组。
+
+
+* 函数的length属性，不包括rest参数。
+
+## 箭头函数
+
+ES6允许使用“箭头”（=>）定义函数。
+
+```
+let f = v => v*v;
+```
+
+上面的箭头函数等同于：
+
+```
+let f = function(v) {
+  return v*v;
+};
+```
+
+如果箭头函数不需要参数或需要多个参数，就使用一个圆括号代表参数部分。
+
+```
+let f = () => 5;
+// 等同于
+let f = function () { return 5 };
+
+let sum = (num1, num2) => num1 + num2;
+// 等同于
+let sum = function(num1, num2) {
+  return num1 + num2;
+};
+```
+
+如果箭头函数的代码块部分多于一条语句，就要使用大括号将它们括起来，并且使用return语句返回。
+
+```
+let sum = (num1, num2) => { return num1 + num2; }
+```
+
+由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号。
+
+```
+let getTempItem = id => ({ id: id, name: "Temp" });
+```
+
+箭头函数可以与变量解构结合使用。
+
+```
+const full = ({ first, last }) => first + ' ' + last;
+
+// 等同于
+function full(person) {
+  return person.first + ' ' + person.last;
+}
+```
+
+箭头函数使得表达更加简洁。
+
+```
+const isEven = n => n % 2 == 0;
+const square = n => n * n;
+```
+
+箭头函数的一个用处是简化回调函数。
+
+```
+// 正常函数写法
+[1,2,3].map(function (x) {
+  return x * x;
+});
+
+// 箭头函数写法
+[1,2,3].map(x => x * x);
+```
+
+另一个例子是
+
+```
+// 正常函数写法
+let result = values.sort(function (a, b) {
+  return a - b;
+});
+
+// 箭头函数写法
+let result = values.sort((a, b) => a - b);
+```
+
+下面是rest参数与箭头函数结合的例子。
+
+```
+const numbers = (...nums) => nums;
+
+numbers(1, 2, 3, 4, 5)
+// [1,2,3,4,5]
+
+const headAndTail = (head, ...tail) => [head, tail];
+
+headAndTail(1, 2, 3, 4, 5)
+// [1,[2,3,4,5]]
+```
+
+TODO: 使用注意点
+TODO: 嵌套的箭头函数
+TODO: 绑定 this
